--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "mongoose": "^8.11.0",
     "nodemon": "^3.1.9",
     "openai": "^4.86.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0"
   }
 }
