--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.8"
 services:
   node-app:
     build: .
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
       - PORT=3000
