config: nginx fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,7 @@
+upstream nodejs_backend {
+    server node-app:3000;
+}
+
 map $http_origin $cors_origin {
     default "";
     "http://localhost:3000" $http_origin;
