--- a/nginx.conf
+++ b/nginx.conf
@@ -1,45 +1,30 @@
-
-upstream nodejs_backend {
-    server node-app:3000;
-}
-map $http_origin $cors_origin {
-    default "";
-    "http://localhost:3000" $http_origin;
-    "https://chatrix-v1.vercel.app" $http_origin;
-    "https://hkaratas.com" $http_origin;
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    server_name localhost;
-
-    location / {
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' $cors_origin always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE, PATCH';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Length' 0;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            return 204;
-        }
-
-        proxy_pass http://nodejs_backend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-        add_header 'Access-Control-Allow-Origin' $cors_origin always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
+http {
+    upstream nodejs_backend {
+        server node-app:3000;
     }
 
-    location /static/ {
-        alias /usr/share/nginx/html/;
-        expires 30d;
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://nodejs_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /static/ {
+            alias /usr/share/nginx/html/;
+            expires 30d;
+        }
     }
 }
