--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,58 @@
+# version: "3.8"
+
+# services:
+#   node-app:
+#     build: .
+#     env_file:
+#       - .env
+#     environment:
+#       - NODE_ENV=production
+#       - PORT=3000
+#     restart: always
+#     ports:
+#       - "3000:3000"
+#     networks:
+#       - app-network
+
+#   nginx:
+#     image: nginx:latest
+#     ports:
+#       - "8080:80"
+#     volumes:
+#       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+#       - ./static:/usr/share/nginx/html
+#     depends_on:
+#       - node-app
+#     restart: always
+#     networks:
+#       - app-network
+
+# networks:
+#   app-network:
+#     driver: bridge
+
 version: "3.8"
 
 services:
-  node-app:
+  app:
     build: .
-    env_file:
-      - .env
-    environment:
-      - NODE_ENV=production
-      - PORT=3000
-    restart: always
+    container_name: express-app
+    restart: unless-stopped
     ports:
       - "3000:3000"
     networks:
       - app-network
 
   nginx:
-    image: nginx:latest
+    image: nginx:stable-alpine
+    container_name: nginx-proxy
+    restart: unless-stopped
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./static:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - node-app
-    restart: always
+      - app
     networks:
       - app-network
 
