--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,27 @@
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./"
+    "rootDir": "./",
+    "moduleResolution": "node",
+    "module": "esnext",
+    "target": "es2022",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "#constants/*": ["constants/*"],
+      "#db/*": ["db/*"],
+      "#services/*": ["services/*"],
+      "#types/*": ["types/*"],
+      "#utils/*": ["utils/*"],
+      "#sse/*": ["sse/*"],
+      "#controllers/*": ["controllers/*"],
+      "#routes/*": ["routes/*"]
+    }
   },
   "include": ["**/*.ts", "global.d.ts"],
   "exclude": ["dist"]
