convert hardware constraints to substitutions

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,11 +21,11 @@ steps:
       '--port', '8080',
       '--set-env-vars', 'NODE_ENV=${_NODE_ENV}',
       '--set-secrets', '${_SECRETS}',
-      '--memory=512Mi',
-      '--cpu=1000m',
-      '--min-instances=0',
-      '--max-instances=1',
-      '--concurrency=80'
+      '--memory=${_MEMORY}',
+      '--cpu=${_CPU}',
+      '--min-instances=${_MIN_INSTANCES}',
+      '--max-instances=${_MAX_INSTANCES}',
+      '--concurrency=${_CONCURRENCY}'
     ]
 
 images:
